examples/lesson4/lecture/openclosed/closedcurve/good/Square.java
package lesson4.lecture.openclosed.closedcurve.good;

public final class Square extends ClosedCurve {
	private final double side;
	
	public Square(double side){
		this.side = side;
		
	}
	public double computeArea() {
		return side * side;
	}


}
